fix courses dark mode and footer

--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,6 @@
   }
 
   .footer-socialMedia {
-    @apply bg-white p-2 rounded-full shadow-md hover:top-1 hover:shadow-lg hover:scale-125 ease-in-out duration-300;
+    @apply bg-white dark:bg-dark-tertiary p-2 rounded-full shadow-md hover:top-1 hover:shadow-lg hover:scale-125 ease-in-out duration-300;
   }
 }
